--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8" />
@@ -11,3 +11,9 @@
 </body>
 
 </html>
+
+
+<style>
+  .card-body i {
+    color: rgba(20, 20, 20, 0.15);
+  }
